--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "deploy:vercel": "vercel"
   },
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide": "^4.1.4",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
